# atlasbuilder-rust

./: .gitignore  Cargo.toml  README.md  regen_fixture_results.cmd
.github/workflows/: release.yml
src/: inputimage.rs  main.rs  outputdebug.rs  outputimage.rs  outputmeta.rs  packer.rs  parse_input_filenames.rs  shapes.rs
templates/: json_array.json  json_array.tmpl  json_hash.json  json_hash.tmpl  toml.toml  xml.xml  yaml.yaml
test_fixtures/results/multi_input_file_result/: out.json
test_fixtures/results/single_input_file_result/: out.json
test_fixtures/results/template_json_array_file_result/: out.json
test_fixtures/results/template_json_hash_file_result/: out.json
test_fixtures/results/template_toml_file_result/: out.toml
test_fixtures/results/template_xml_file_result/: out.xml
test_fixtures/results/template_yaml_file_result/: out.yaml
test_fixtures/templates/: broken-no-loop-end  valid-outside-std-dir
tests/: integration.rs  test.rs
